aligned header column on depictions an fixed table of contents

--- a/CSETWebApi/CSETWeb_Api/CSETWebCore.Reports/wwwroot/css/site.css
+++ b/CSETWebApi/CSETWeb_Api/CSETWebCore.Reports/wwwroot/css/site.css
@@ -13,6 +13,9 @@ a.navbar-brand {
 .report-body-crr {
     font-family: Arial !important;
     font-size: 12pt !important;
+    margin: auto;
+    margin-left: 20vw;
+    max-width: 80vw;
 }
 
 h1 {
@@ -110,12 +113,6 @@ p {
 
 
 
-
-.report-body-crr {
-    margin: auto;
-    margin-left: 20rem;
-    margin-right: 1in;
-}
 .side-toc {
     background-color: #fff;
     box-sizing: border-box;
@@ -123,15 +120,15 @@ p {
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     position: fixed;
     left: 0;
-    top: 0;
-    height: 100vh;
-    padding-top: 5rem;
-    padding-bottom: 2rem;
-    padding-left: 0.7rem;
+    top: 60px;
+    height: calc(100vh - 60px);
+    padding: 0.75rem;
     overflow-y: auto;
-    max-width: 20rem;
+    width: 15vw;
+    min-width: 250px;
 }
 .side-toc a {
+    font-size: 12px;
     word-break: break-word;
     text-decoration: none;
 }
